@@ -1,0 +1,8 @@
+#ifndef _ALUTERROR_H
+#define _ALUTERROR_H
+
+#include <AL/al.h>
+
+extern void _alutSetError (ALenum err);
+
+#endif /* not _ALUTERROR_H */
